--- a/angularjs-todolist/app/index.html
+++ b/angularjs-todolist/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+		<link rel="stylesheet" href="bower_components/angular-xeditable/dist/css/xeditable.css" />
   </head>
   <body ng-app="angularjsTodolistApp">
     <!--[if lte IE 8]>
@@ -30,17 +31,17 @@
           	<span class="icon-bar"></span>
           	<span class="icon-bar"></span>
         	</button>
-        	<a class="navbar-brand" th:href="@{/}">OAuth2 Todo List</a>
+        	<a class="navbar-brand" href="#/">OAuth2 Todo List</a>
       	</div>
       	<div id="navbar" class="collapse navbar-collapse">
-        	<ul th:with="condition=${session.username}" class="nav navbar-nav">
-          	<li><a th:href="@{/}">Home</a></li>
-          	<li th:if="${condition}"><a th:href="@{/todos}">My Todos</a></li>
-          	<li th:unless="${condition}"><a th:href="@{/login}">Login</a></li>
+        	<ul class="nav navbar-nav">
+          	<li><a href="#/">Home</a></li>
+          	<li ng-show="username"><a href="#/todos">My Todos</a></li>
+          	<li ng-hide="username"><a href="#/login">Login</a></li>
         	</ul>
-        	<ul th:with="condition=${session.username}" class="nav navbar-nav navbar-right">
-          	<li th:if="${condition}" class="dropdown">
-            	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span th:text="${session.username}">User</span> <b class="caret"></b></a>
+        	<ul ng-show="username" class="nav navbar-nav navbar-right">
+          	<li class="dropdown">
+            	<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span>{{username}}</span> <b class="caret"></b></a>
             	<ul class="dropdown-menu">
               	<li>
               		<a th:href="${@urlService.getLogoutRedirectUri()}"><i class="glyphicon glyphicon-log-out"></i> Sign-out</a>           
@@ -69,11 +70,13 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+		<script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/todolist.js"></script>
+		<script src="scripts/services/todolist.js"></script>
     <!-- endbuild -->
 		<script type="text/javascript">
       $(document).ready(function() {
