--- a/angularjs-todolist/app/index.html
+++ b/angularjs-todolist/app/index.html
@@ -97,6 +97,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
+    <script src="scripts/app.constants.js"></script>
 		<script src="scripts/controllers/navbar.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/todolist.js"></script>
